--- a/LocationBasedVideos/Base.lproj/Main.storyboard
+++ b/LocationBasedVideos/Base.lproj/Main.storyboard
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6245" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="zep-Z7-Dir">
     <dependencies>
+        <deployment defaultVersion="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
     </dependencies>
     <scenes>
@@ -229,11 +230,46 @@
                         <outlet property="signalStrenghtView" destination="ft8-mp-Imu" id="BQ9-X2-XMR"/>
                         <outlet property="successView" destination="YOU-Gh-QhK" id="nhW-bO-EWS"/>
                         <segue destination="kus-3F-gmt" kind="push" identifier="nextVideo" id="FXL-va-yVa"/>
+                        <segue destination="PKe-7N-IHr" kind="push" identifier="success" id="eRn-cx-GtB"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="if6-hA-dDB" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2506" y="318"/>
+        </scene>
+        <!--Success View Controller-->
+        <scene sceneID="ySk-Hw-wRC">
+            <objects>
+                <viewController id="PKe-7N-IHr" customClass="SuccessViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Ad6-gn-eRj">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Du hast Waldi gefunden. Möge er in Frieden Ruhen." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="v4t-n1-82K">
+                                <rect key="frame" x="20" y="89" width="280" height="100"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="jpz-LC-X1f">
+                                <rect key="frame" x="126" y="243" width="69" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Zum Start">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="didTapReturnButton:" destination="PKe-7N-IHr" eventType="touchUpInside" id="aSN-Mx-YDa"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="KSz-uO-56e"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0Ym-sp-byx" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2934" y="318"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="mmN-ho-q2w">
